# lib/iarvis_web/router.ex
@@ -8,8 +8,8 @@ defmodule IarvisWeb.Router do
   scope "/api", IarvisWeb do
     pipe_through :api
 
-    get "/categories", CategoryController, :index
-    get "/category/:id", CategoryController, :show
-    post "/category", CategoryController, :create
+  get "/categories", CategoryController, :index
+  get "/categories/:id", CategoryController, :show
+  post "/categories", CategoryController, :create
   end
 end
